# postgresql-audit

./: .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  activity.sql  conftest.py  create_activity.sql  postgresql_audit.py  pyproject.toml  pytest.ini  requirements.dev  requirements_test.txt  schema.sql  setup.py  test.py  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
docs/: Makefile  conf.py  flask.rst  index.rst  installation.rst  make.bat  migrations.rst  sqlalchemy.rst
flask_audit_logger/: __init__.py  audit_logger.py  expressions.py  migrations.py
flask_audit_logger/alembic/: __init__.py  migration_ops.py  setup_functions_and_triggers.py  setup_schema.py
flask_audit_logger/templates/: audit_trigger_delete.sql  audit_trigger_insert.sql  audit_trigger_update.sql  create_activity.sql  create_schema.sql  drop_schema.sql  get_setting.sql  jsonb_change_key_name.sql  jsonb_subtract.sql
postgresql_audit/: __init__.py  activity.sql  audit_logger.py  audit_table.sql  base.py  create_activity.sql  expressions.py  flask.py  migrations.py  relationships.py  resurrect.py  schema.sql  utils.py
postgresql_audit/alembic/: __init__.py  init_activity_table_triggers.py  migration_ops.py  register_table_for_version_tracking.py  setup_schema.py
postgresql_audit/templates/: activity.sql  audit_table_func.sql  audit_table_row_level.sql  audit_table_stmt_level.sql  audit_trigger_delete.sql  audit_trigger_insert.sql  audit_trigger_update.sql  create_activity.sql  create_activity_row_level.sql  create_activity_stmt_level.sql  create_schema.sql  drop_schema.sql  operators.sql  operators_pre95.sql  operators_pre96.sql
requirements/: docs.txt  lint.txt  test-base.in  test-base.txt  test-max.in  test-max.txt  test-min.in  test-min.txt
tests/: __init__.py  conftest.py  test_activity_relationships.py  test_custom_schema.py  test_expression_reflector.py  test_flask_integration.py  test_json_functions.py  test_migration_functions.py  test_operators.py  test_resurrect.py  test_resurrect_all.py  test_revert.py  test_sql_files.py  test_sqlalchemy_integration.py  utils.py
tests/custom_actor/: conftest.py  flask_app.py  test_audit_logger_custom_actor.py
tests/custom_actor/alembic_config/: alembic.ini  env.py
tests/defaults/: conftest.py  flask_app.py  test_audit_logger_defaults.py  test_json_functions.py  test_migration_functions.py  test_operators.py
tests/defaults/alembic_config/: alembic.ini  env.py
tests/separate_schema/: conftest.py  flask_app.py  test_audit_logger_separate_schema.py
tests/separate_schema/alembic_config/: alembic.ini  env.py
