[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-audit-logger"
dynamic = ["version"]
description = "Versioning and auditing extension for PostgreSQL and SQLAlchemy."
readme = "README.md"
license = "bsd-2-clause"
requires-python = ">=3.8"
authors = [
    { name = "Garrett Massman", email = "gmassman20@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SQLAlchemy-Utils>=0.37.0",
    "SQLAlchemy>=1.4",
    "Flask>=2.3",
    "Flask-SQLAlchemy>=3.0",
    "Alembic>=1.13",
]

[project.urls]
Homepage = "https://github.com/gmassman/flask-audit-logger"

[tool.hatch.version]
path = "flask_audit_logger/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGES.rst",
    "/docs",
    "/flask_audit_logger",
    "/tests",
]
exclude = [
    "/docs/_build",
]

[tool.isort]
known_first_party = ["flask_audit_logger", "tests"]
line_length       = 79
multi_line_output = 3
order_by_type     = false

[tool.pytest.ini_options]
filterwarnings = [
    'error:.*:DeprecationWarning:flask_audit_logger',
]
